# ChangeLog for sys-kernel/zen-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/zen-sources/ChangeLog,v 1.27 2010/01/25 09:32:12 wired Exp $

*zen-sources-2.6.33_rc5_p1 (25 Jan 2010)

  25 Jan 2010; Alex Alexander <wired@gentoo.org>
  +zen-sources-2.6.33_rc5_p1.ebuild:
  version bump, includes hotfix

  20 Jan 2010; Markos Chandras <hwoarang@gentoo.org>
  zen-sources-2.6.33_rc4_p1.ebuild:
  Remove obsolete patch. Fixes bug #301517

*zen-sources-2.6.32_p5 (19 Jan 2010)
*zen-sources-2.6.31_p11 (19 Jan 2010)

  19 Jan 2010; Markos Chandras <hwoarang@gentoo.org>
  +zen-sources-2.6.31_p11.ebuild, +zen-sources-2.6.32_p5.ebuild:
  Version bump

*zen-sources-2.6.33_rc4_p1 (17 Jan 2010)

  17 Jan 2010; Markos Chandras <hwoarang@gentoo.org>
  +zen-sources-2.6.33_rc4_p1.ebuild:
  Version bump

  06 Jan 2010; Alex Alexander <wired@gentoo.org>
  zen-sources-2.6.30_p11.ebuild, zen-sources-2.6.31_p8.ebuild,
  zen-sources-2.6.31_p9.ebuild, zen-sources-2.6.31_p10.ebuild,
  zen-sources-2.6.32_p1.ebuild, zen-sources-2.6.32_p2.ebuild,
  zen-sources-2.6.32_p3.ebuild, zen-sources-2.6.32_p4.ebuild,
  zen-sources-2.6.33_rc2_p1-r1.ebuild, zen-sources-9999.ebuild:
  dropped useless RESTRICTs, fixed bug 299906

*zen-sources-2.6.33_rc2_p1-r1 (06 Jan 2010)

  06 Jan 2010; <hwoarang@gentoo.org> -zen-sources-2.6.33_rc2_p1.ebuild,
  +zen-sources-2.6.33_rc2_p1-r1.ebuild,
  +files/zen-sources-2.6.33_rc2_p1-kernel-sysctl.c.patch:
  Bump to fix a kernel configuration issue which is not fixed on zen-sources
  git
  repository
  Related commit:
  http://git.zen-kernel.org/?p=kernel/zen.git;a=commitdiff;h=3764e86df27a810
  77ed043ce5c659c7970541371

  03 Jan 2010; Alex Alexander <wired@gentoo.org>
  zen-sources-2.6.30_p11.ebuild, zen-sources-2.6.31_p8.ebuild,
  zen-sources-2.6.31_p9.ebuild, zen-sources-2.6.31_p10.ebuild,
  zen-sources-2.6.32_p1.ebuild, zen-sources-2.6.32_p2.ebuild,