@@ -3,6 +3,7 @@ AUX zen-sources-2.6.33_rc2_p1-kernel-sysctl.c.patch 711 RMD160 76699719dc16cc697
 DIST 2.6.30-zen11.patch.lzma 1844571 RMD160 2dd6c496bd425c34399a631ffa84c5af273b894a SHA1 6fe33e05c1f608711bd9d1d9e92b6b861dd9ced1 SHA256 d7894256b08c9766252b0575fc1ac298791194a8f298bcc929643aa92cd31949
 DIST 2.6.31-zen10.patch.lzma 1998610 RMD160 114ee9fd7a6778083d4db3e01db5e5c365d24fdf SHA1 2cbb5ab123fcb6d62e45ccffc4b5e7e7b579de81 SHA256 0118b721f5f495c4a17aebfeba2e82ae903e7d95d6054e2a24e85dd6395d4fe3
 DIST 2.6.31-zen11.patch.lzma 2040839 RMD160 690c8107efafd0339cee756b7bd5b12e8756141a SHA1 bf7922d24b803b87010ddc784a0a202327ee3566 SHA256 1a04fcfa8556fcd0a16ee7d6253274b0a0305be2d5d1ff4de734d8faaccc09f7
+DIST 2.6.31-zen12.patch.lzma 2043347 RMD160 06685aac849dc7cfd3a412c1ceaac56b8e406add SHA1 106ab0acdda6e03b99002c83897287726b8067e5 SHA256 8d45633592f439be873b4888cb263f5011bced2f14607b64ef80961b2b8185e0
 DIST 2.6.31-zen8-drmnext.patch.lzma 426431 RMD160 80e6c76b9553e9e8c7b4a776108959a98896d213 SHA1 10e1d55db1f67eb34572b65afdf8a43938624e60 SHA256 3402f820548ccbdcfccca14bbd5af2df1795ff9765770e025fa5c88b114247b4
 DIST 2.6.31-zen8.patch.lzma 1921521 RMD160 026f4b13ed31cccb2c672beb3392335e54e23a54 SHA1 5fcabcd38dfeda5250bb70f9bfbe03f9f4480477 SHA256 8bd02a6227dc794739be026b1f2cd48a718dd8d5bf5407a0a06d89026f5841b0
 DIST 2.6.31-zen9-drmnext.patch.lzma 428205 RMD160 7ca7885f9003877baa1df4ea8bc58ec52d3b6418 SHA1 07ab6eca5b5a7a82177f020a72056ae8d8dacf5f SHA256 7e32cc3cf2f091811fa6d6034cea19bde864a5c18f3e73a75cca0148b15ca545
@@ -12,6 +13,7 @@ DIST 2.6.32-zen2.patch.lzma 1212652 RMD160 1bce1ee1917fe4b4b82cb81d39708ade28e8f
 DIST 2.6.32-zen3.patch.lzma 1251794 RMD160 da0f87516c035b16c015d0eb6e75a71abc64ef04 SHA1 419e45acfd335d3016dba4ea42fb0e35002ba29b SHA256 0794d99da12c3e36d887269e9bdf155ee43ba9544117a17eb16a82e2e1621916
 DIST 2.6.32-zen4.patch.lzma 1278841 RMD160 b69bfa57d6883ee7faddac33f75b9a29a881b823 SHA1 fe4f48a418118a3895fd874201916fb5c2c89905 SHA256 628aabaffb8fb7f1e09c21dd6f7bf00cae200a030190c402c74ee2179d4ed7b7
 DIST 2.6.32-zen5.patch.lzma 1297652 RMD160 288449a5633cac59b5eb751ae09189bc3112630f SHA1 5e6d8de6040b978219a6cf2e6e8c856c7fa14289 SHA256 df56638d000bdae18871c8506d7107800b99d2a6be36d95e1d21ed9ec3db23d3
+DIST 2.6.32-zen6.patch.lzma 1347329 RMD160 0ec3fd0d2f3f7bcacd6777266e9c70b1243dd8d6 SHA1 1752ecfe172ac78a5a6d0409e5f28e4861ac1b1a SHA256 187558571dbddeb33a5d7aca3f65b421cde3642457f7d2520ab0f1bfcd4187b7
 DIST 2.6.33-rc2-zen1.patch.lzma 1225676 RMD160 3d951aa70f6a1285e5b3d0d65014efa7a876fb32 SHA1 6f1a0e6e62b74da7e65417acff50257df9fe8989 SHA256 c91c350477dd2248f263c2b136768d3aad5d861fb3de8aa92a1faac99175f8ba
 DIST 2.6.33-rc4-zen1.patch.lzma 1296091 RMD160 b2c0dee187fef5a8a26a1b7cb9956069afee785d SHA1 d0af0cd5c732e0737971b7a4cc700abf843433dc SHA256 5c83663d81457c2bfff59909691a37f5d4bea217d9c517c5fa5adf267cd21809
 DIST 2.6.33-rc5-zen1-hotfix1.patch 1622 RMD160 b6d74521944b197852d3e6630ee128ff7443fb0f SHA1 9532aed727fddcd134090dc65957074e62e8a4a6 SHA256 0f48dfd89ea9ed94cd8f927c7bb39a31ccd86edf4a82f4f06a8fcd54c4c6721c
@@ -25,6 +27,7 @@ DIST patch-2.6.33-rc5.bz2 10346004 RMD160 9e49740e053878797e4ec5b7652c736461d7bf
 EBUILD zen-sources-2.6.30_p11.ebuild 1381 RMD160 f3b944ba8aa247a81e368361e8f877cb957a7707 SHA1 3cd37f2e74945584768a5a7a59d8ca31ae19da3d SHA256 088deb92b05c02a4b56df039a0562717b7f6a08d21a8347a74de7c137e4a34b0
 EBUILD zen-sources-2.6.31_p10.ebuild 1648 RMD160 be1f7edf999661cd25e779919d7461afa4cb0bbb SHA1 51f6a36003e44d076123835bf8828a91e6cff87e SHA256 b5ef5c13aafff7bf22f8dedb527bfecfcff8de9edda54f0b9c600b5837d0c699
 EBUILD zen-sources-2.6.31_p11.ebuild 1648 RMD160 be1f7edf999661cd25e779919d7461afa4cb0bbb SHA1 51f6a36003e44d076123835bf8828a91e6cff87e SHA256 b5ef5c13aafff7bf22f8dedb527bfecfcff8de9edda54f0b9c600b5837d0c699
+EBUILD zen-sources-2.6.31_p12.ebuild 1648 RMD160 be1f7edf999661cd25e779919d7461afa4cb0bbb SHA1 51f6a36003e44d076123835bf8828a91e6cff87e SHA256 b5ef5c13aafff7bf22f8dedb527bfecfcff8de9edda54f0b9c600b5837d0c699
 EBUILD zen-sources-2.6.31_p8.ebuild 1654 RMD160 ba883c221291caad3707745d87c74c8ca9880aed SHA1 77bcc74f818d4fb61c3dd8139f7d24a081ae6f46 SHA256 83cf5cf75f5b89a1a33927707ea71e84466be8f344dddadd964c4cb5840f154b
 EBUILD zen-sources-2.6.31_p9.ebuild 1654 RMD160 ba883c221291caad3707745d87c74c8ca9880aed SHA1 77bcc74f818d4fb61c3dd8139f7d24a081ae6f46 SHA256 83cf5cf75f5b89a1a33927707ea71e84466be8f344dddadd964c4cb5840f154b
 EBUILD zen-sources-2.6.32_p1.ebuild 1381 RMD160 f3b944ba8aa247a81e368361e8f877cb957a7707 SHA1 3cd37f2e74945584768a5a7a59d8ca31ae19da3d SHA256 088deb92b05c02a4b56df039a0562717b7f6a08d21a8347a74de7c137e4a34b0
@@ -32,9 +35,10 @@ EBUILD zen-sources-2.6.32_p2.ebuild 1381 RMD160 f3b944ba8aa247a81e368361e8f877cb
 EBUILD zen-sources-2.6.32_p3.ebuild 1381 RMD160 f3b944ba8aa247a81e368361e8f877cb957a7707 SHA1 3cd37f2e74945584768a5a7a59d8ca31ae19da3d SHA256 088deb92b05c02a4b56df039a0562717b7f6a08d21a8347a74de7c137e4a34b0
 EBUILD zen-sources-2.6.32_p4.ebuild 1381 RMD160 f3b944ba8aa247a81e368361e8f877cb957a7707 SHA1 3cd37f2e74945584768a5a7a59d8ca31ae19da3d SHA256 088deb92b05c02a4b56df039a0562717b7f6a08d21a8347a74de7c137e4a34b0
 EBUILD zen-sources-2.6.32_p5.ebuild 1381 RMD160 f3b944ba8aa247a81e368361e8f877cb957a7707 SHA1 3cd37f2e74945584768a5a7a59d8ca31ae19da3d SHA256 088deb92b05c02a4b56df039a0562717b7f6a08d21a8347a74de7c137e4a34b0
+EBUILD zen-sources-2.6.32_p6.ebuild 1381 RMD160 f3b944ba8aa247a81e368361e8f877cb957a7707 SHA1 3cd37f2e74945584768a5a7a59d8ca31ae19da3d SHA256 088deb92b05c02a4b56df039a0562717b7f6a08d21a8347a74de7c137e4a34b0
 EBUILD zen-sources-2.6.33_rc2_p1-r1.ebuild 1432 RMD160 35ec5ef1d3cb1d5e10eeabdac23de6c3f1d7b942 SHA1 ab2a1648627b90210ea4aceac2a94bbba5a458ba SHA256 e20c99ea102f58915e88e65daac2a54961fb0bf47ee26ea738a29f7d406637b7
 EBUILD zen-sources-2.6.33_rc4_p1.ebuild 1381 RMD160 f3b944ba8aa247a81e368361e8f877cb957a7707 SHA1 3cd37f2e74945584768a5a7a59d8ca31ae19da3d SHA256 088deb92b05c02a4b56df039a0562717b7f6a08d21a8347a74de7c137e4a34b0
 EBUILD zen-sources-2.6.33_rc5_p1.ebuild 1486 RMD160 748bda6efdade0d4419d9aae72a7605b33536105 SHA1 c9e84850a8ec442fc24dda9e4d25f40ce85c0eb9 SHA256 f4bde6ec6650ab11c51504b3677f1062aabb829574d4c95ccaa14dea45985c5f
 EBUILD zen-sources-9999.ebuild 1243 RMD160 edd83a41aeae33d9aa7aff5c2105888f3ae49e78 SHA1 bd7a53d6ec6f7533b23e31cfdec7f0fac5c12e66 SHA256 a26eaf92415e14e759921b55c5ad8b8c4cd48b537e5f12814fea346a9aff4050
-MISC ChangeLog 6635 RMD160 e0c509851f8bf2de3689ff28b5230eddc17e8a41 SHA1 07f5ba9b9456ba22c89b429b96928bd4f2b6d0e9 SHA256 1c9e5944dd4a14e4f792ccaa0e6ae078115b9f059eb164c7fa274d734b2fdd12
+MISC ChangeLog 6832 RMD160 200887619ce5abca501b768c426b24e380dc7f1c SHA1 4a74ab5c973abe08b10ff7bcdcd3cc8e5d1ffe3e SHA256 c787db07bf0f6fdbaf836938922062d2453d03ba35e3267b65568394f38ee17f
 MISC metadata.xml 462 RMD160 1a2551d61bd21846ff1b8469a4b8c367c000bb23 SHA1 ecb5a2310bce4cf73147fe137ca853cee4ca90c5 SHA256 62463389952546833d94a333f2a906c609848b85bda3b9379bac97c79f89dbf4
