@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/zen-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/zen-sources/ChangeLog,v 1.27 2010/01/25 09:32:12 wired Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/zen-sources/ChangeLog,v 1.28 2010/01/31 04:59:18 hwoarang Exp $
+
+*zen-sources-2.6.32_p6 (31 Jan 2010)
+*zen-sources-2.6.31_p12 (31 Jan 2010)
+
+  31 Jan 2010; <hwoarang@gentoo.org> +zen-sources-2.6.31_p12.ebuild,
+  +zen-sources-2.6.32_p6.ebuild:
+  Version bump
 
 *zen-sources-2.6.33_rc5_p1 (25 Jan 2010)
 
